# annotatorplugins

./: .travis.yml  CMakeLists.txt  README.md  annotatorplugins-config.cmake
cmake/: CompileOptions.cmake
docs/api-docs/: CMakeLists.txt
source/: CMakeLists.txt
source/annotatorplugins/: CMakeLists.txt
source/annotatorplugins/camshift/: camshift.cpp  camshift.h
source/annotatorplugins/correlationtracker/: CMakeLists.txt
source/annotatorplugins/kalmanfilter/: CMakeLists.txt  kalmanfilter.cpp  kalmanfilter.h
source/annotatorplugins/templatematcher/: CMakeLists.txt  templatematcher.cpp  templatematcher.h
source/annotatorplugins/watsonvisualrecognition/: CMakeLists.txt  watsonvisualrecognition.cpp  watsonvisualrecognition.h  watsonvisualrecognition.json  widget.cpp  widget.h  widget.ui
